--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -24,6 +24,15 @@ h2 {
     font-size: 30px;
 }
 
+/*-------------------------- Title --------------------------*/
+
+.description {
+    color: #fff;
+    text-align: center;
+    margin-top: 50px;
+    font-weight: 600;
+}
+
 /*-------------------------- Retry Button --------------------------*/
 
 #retry {
@@ -43,7 +52,8 @@ h2 {
 /*---------------------------- Guess Count ----------------------------*/
 
 .guess-count {
-    margin-top: 100px;
+    height: 25px;
+    margin-top: 30px;
     text-align: center;
     color: #fff;
     font-size: 25px;
